Fix footer align

--- a/style.css
+++ b/style.css
@@ -16,4 +16,5 @@ html {
 
 footer {
     width: 100%;
+    text-align: center;
 }
